# nanopow

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/co/perish/nanopow/: PowPlugin.kt
android/src/test/kotlin/com/example/nanopow/: NanopowPluginTest.kt
ios/: Podfile  pow_plugin.podspec
ios/Classes/: PowPlugin.swift
lib/: nanopow.dart
src/: CMakeLists.txt  build-android.sh  build-ios.sh  pow.h  pow_lib.cpp
src/android_build/: CMakeCache.txt  Makefile  cmake_install.cmake
src/ios_build/: CMakeCache.txt  cmake_install.cmake
src/ios_build/CMakeScripts/: ReRunCMake.make
src/ios_build/Release-iphoneos/pow_lib.framework/: Info.plist  pow_lib
src/ios_build/pow_lib.xcodeproj/: project.pbxproj
test/: nanopow_method_channel_test.dart  nanopow_test.dart
